add authorization at router & openapi docs
